<resources>
    <string name="app_name">CLReader</string>
    <string name="main_title">草木社区 Beta</string>
    <string name="wxjlq">文学交流区</string>
    <string name="jstlq">技术讨论区</string>
    <string name="xsddwm">新时代的我们</string>
    <string name="dgedqz">达盖尔的旗帜</string>
    <string name="nightMode">夜间模式</string>
    <string name="favorite">收藏夹</string>
    <string name="history">历史记录</string>
    <string name="dot">•</string>
    <string name="about">关于</string>
    <string name="others">其他</string>
    <string name="bypass_gfw">使用免翻地址</string>
    <string name="network_settings">网络设置</string>
    <string name="enable_pass">开启密码</string>
    <string name="security_settings">安全设置</string>
    <string name="set_pass">设置密码</string>

</resources>
